--- a/admin/add-users.html
+++ b/admin/add-users.html
@@ -75,7 +75,7 @@
 
                                         <div class="form-group">
                                             <label>Hình ảnh</label>
-                                            <input type="file" class="form-control" id="hinhAnh" name="name" required="" placeholder="">
+                                            <input type="text" class="form-control" id="hinhAnh" name="name" required="" placeholder="">
                                         </div>
                                         <div class="form-group">
                                             <label>Địa chỉ</label>
@@ -88,11 +88,11 @@
                                         </div>
                                         <label for="" class="m-r-15">Vai trò: </label>
                                         <label class="btn btn-outline-success waves-effect waves-light m-r-10">
-                                            <input type="radio" name="stt" id="anHien" value="1" checked>
+                                            <input type="radio" name="stt" class="anHien" value="1" checked>
                                             Admin
                                         </label>
                                         <label class="btn btn-outline-danger waves-effect waves-light">
-                                            <input type="radio" name="stt" id="anHien" value="0">
+                                            <input type="radio" name="stt" class="anHien" value="0">
                                             User
                                         </label>
                                         
@@ -101,10 +101,8 @@
                                                 <button id="btnluu" type="submit" class="btn btn-primary waves-effect waves-light btn-category">
                                             Thêm
                                                 </button>
-                                                <a href="">
-                                                    <button type="reset" class="btn btn-secondary waves-effect m-l-5">
+                                                <a class="btn btn-secondary waves-effect m-l-5" href="member.html">
                                                 Cancel
-                                                    </button>
                                                 </a>
                                             </div>
                                         </div>
