--- a/admin/update-user.html
+++ b/admin/update-user.html
@@ -96,10 +96,8 @@
                                                 <button id="btnluu" type="submit" class="btn btn-primary waves-effect waves-light btn-update">
                                             Cập nhật
                                             </button>
-                                                <a href="">
-                                                    <button type="reset" class="btn btn-secondary waves-effect m-l-5">
+                                            <a class="btn btn-secondary waves-effect m-l-5" href="member.html">
                                                 Cancel
-                                                    </button>
                                                 </a>
                                             </div>
                                         </div>
