--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                     <p><i class="fa fa-check text-primary me-3"></i>Sản phẩm chất lượng cao</p>
                     <p><i class="fa fa-check text-primary me-3"></i>Các du khách đều để lại lượt đánh giá tốt</p>
                     <p><i class="fa fa-check text-primary me-3"></i>Giá cả phải chăng</p>
-                    <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Tìm hiểu thêm</a>
+                    <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Tìm hiểu thêm</a> -->
                 </div>
             </div>
         </div>
@@ -105,13 +105,13 @@
                 <div class="col-md-8 wow fadeIn" data-wow-delay="0.1s">
                     <h1 class="display-5 text-white mb-3">Ghé thăm chúng tôi</h1>
                     <p class="text-white mb-0">
-                        Hãy ghé thăm <span><b>Anh Sú</b></span> ít nhất một lần để
+                        Hãy ghé thăm <span><b>SILKROAD ECOMMERCE</b></span> ít nhất một lần để
                         thưởng thức những món ăn ngon gây thương nhớ
                         với những cảm xúc khó phai nhòa này nhé!
                     </p>
                 </div>
                 <div class="col-md-4 text-md-end wow fadeIn" data-wow-delay="0.5s">
-                    <a class="btn btn-lg btn-secondary rounded-pill py-3 px-5" href="product.html">Đến cửa hàng ngay</a>
+                    <a class="btn btn-lg btn-secondary rounded-pill py-3 px-5" href="shop-grid.html?idDMT=2">Đến cửa hàng ngay</a>
                 </div>
             </div>
         </div>
