--- a/about.html
+++ b/about.html
@@ -106,8 +106,8 @@
                     <h1 class="display-5 text-white mb-3">Ghé thăm chúng tôi</h1>
                     <p class="text-white mb-0">
                         Hãy ghé thăm <span><b>SILKROAD ECOMMERCE</b></span> ít nhất một lần để
-                        thưởng thức những món ăn ngon gây thương nhớ
-                        với những cảm xúc khó phai nhòa này nhé!
+                        nhận nhiều phần quà ưu đãi lớn, luôn có những sự kiện đặc biệt
+                        khi ghé đến <b>SILKROAD ECOMMERCE</b>.
                     </p>
                 </div>
                 <div class="col-md-4 text-md-end wow fadeIn" data-wow-delay="0.5s">
@@ -133,12 +133,12 @@
     <script src="./js/mixitup.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/toastr.min.js"></script>
-    <script src="js/main.js"></script>
     <!-- JS -->
     <script src="./js/sanpham/timkiemsanpham.js"></script>
     <script src="./js/sanpham/hiensanpham.js" defer type="module"></script>
     <script src="./js/danhmuc/hiendanhmuctong.js" defer type="module"></script>
     <script src="./js/footAndHead.js"></script>
+    <script src="js/main.js"></script>
     <Script src="./js/giohang/themvaogiohang.js"></Script>
 </body>
 
