--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
 					<img src="./img/banner/banner-4.png"
 						class="img-fluid" alt="Phone image">
 				</div>
-				<div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+				<div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1 login__form">
 					<form>
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form1Example13">Email</label>
