--- a/resigter.html
+++ b/resigter.html
@@ -79,7 +79,7 @@
 					<img src="./img/banner/banner-5.png"
 						class="img-fluid" alt="Phone image">
 				</div>
-				<div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+				<div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1 register__form">
 					<form>
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form1Example13">Họ và tên<span style="color:#ff0000">*</span></label>
