--- a/about.html
+++ b/about.html
@@ -105,9 +105,8 @@
                 <div class="col-md-8 wow fadeIn" data-wow-delay="0.1s">
                     <h1 class="display-5 text-white mb-3">Ghé thăm chúng tôi</h1>
                     <p class="text-white mb-0">
-                        Hãy ghé thăm <span><b>SILKROAD ECOMMERCE</b></span> ít nhất một lần để
-                        thưởng thức những món ăn ngon gây thương nhớ
-                        với những cảm xúc khó phai nhòa này nhé!
+                        Hãy ghé thăm <span><b>SILKROAD ECOMMERCE</b></span> ít nhất một lần
+                        để thỏa niềm đam mê mua sắm của bạn, chúng tôi luôn sẵng lòng phục vụ mọi nhu cầu của khách hàng!
                     </p>
                 </div>
                 <div class="col-md-4 text-md-end wow fadeIn" data-wow-delay="0.5s">
