--- a/contact.html
+++ b/contact.html
@@ -78,14 +78,14 @@
                     <div class="contact__widget">
                         <span class="icon_phone"></span>
                         <h4>Điện thoại</h4>
-                        <p>+01-3-8888-6868</p>
+                        <p>+08 390 8585</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 text-center">
                     <div class="contact__widget">
                         <span class="icon_pin_alt"></span>
                         <h4>Địa chỉ</h4>
-                        <p>60-49 Road 11378 New York</p>
+                        <p>Lô 24 CVPM Quang Trung, P.Tân Chánh Hiệp, Q.12, TP.HCM</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 text-center">
