--- a/admin/update-donhang.html
+++ b/admin/update-donhang.html
@@ -95,7 +95,7 @@
                                         <div class="form-group">
                                             <select id="trangThaiDH"  class="anHien form-group" >
                                                 <option value="Chờ xác nhận">Chờ xác nhận</option>
-                                                <option value="Đang giap">Đang giao</option>
+                                                <option value="Đang giao">Đang giao</option>
                                                 <option value="Đã giao">Đã giao</option>
                                                 <option value="Huỷ">Hủy</option>
                                             </select>
