--- a/userdetail.html
+++ b/userdetail.html
@@ -85,6 +85,7 @@
           <thead>
             <tr>
               <th>#</th>
+              <th>ID đơn hàng</th>
               <th style="width: 250px;">Tên sản phẩm</th>
               <th>Hình ảnh</th>
               <th>Số lượng</th>
