--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    <!-- <div class="all-pop">
+    <div class="all-pop">
         <section class="popup">
             <div class="contentBox">
                 <div class="close"></div>
@@ -42,7 +42,7 @@
                     <h3>Giảm giá "So deep"</h3>
                     <h2>69<sup>%</sup><span> OFF</span></h2>
                     from.
-                    <a href="./shop-grid.html?idDMT=1">Mua ngay!</a>
+                    <a href="./shop-grid.html?idDMT=2">Mua ngay!</a>
                 </div>
             </div>
         </section>
@@ -70,7 +70,7 @@
             })
             
         </script>
-    </div> -->
+    </div>
 
     <!-- Humberger Begin -->
     <div class="humberger__menu__overlay"></div>
