--- a/about.html
+++ b/about.html
@@ -81,8 +81,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <h1 class="display-5 mb-4 text-dark">Silk Road</h1>
-                    <p class="mb-4">
+                    <h1 class="display-5 mb-4 text-dark" style="color: black;">Silk Road</h1>
+                    <p class="mb-4"style="text-align:justify">
                         Kênh thương mại đa dạng với những sản phảm phổ biến mà mọi người thường dùng.
                         Từ các thiết bị điện tử đến các mặt hàng thời trang, đều là những sản phẩm đang 
                         rất được ưa chuộng. Giá thành đều rất rẻ và nhiều ưu đãi khi đến với SilkRoad. 
