--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     <img src="./img/banner/banner-4.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>Giảm giá "So deep"</h3>
-                    <h2>69<sup>%</sup><span> OFF</span></h2>
-                    from.
-                    <a href="./shop-grid.html?idDMT=2">Mua ngay!</a>
+                    <h3>Welcome to Silkroad</h3>
+                    <h2>20<sup>%</sup><span> OFF</span></h2>
+                    Chọn mã "CHAOMUNG" để được giảm giá!
+                    <a href="./shop-grid.html?idDMT=1">Mua ngay!</a>
                 </div>
             </div>
         </section>
