--- a/admin/update-category.html
+++ b/admin/update-category.html
@@ -73,6 +73,9 @@
                                             <input id="ten" type="text" class="form-control" name="name" required="" placeholder="Tên sản phẩm...">
 
                                         </div>
+                                        <div class="form-group">
+                                            <input id="id" type="text" class="form-control" name="name" required="" placeholder="">
+                                        </div>
                                         <label for="" class="m-r-15">Trạng thái: </label>
                                         <div id="div_anHien">
                                             
