--- a/admin/update-product.html
+++ b/admin/update-product.html
@@ -73,7 +73,9 @@
 
                                             </select>
                                         </div>
-                                        
+                                        <div class="form-group">
+                                            <input type="hidden" class="form-control" id="id" name="name" required="" placeholder="id">
+                                        </div>
                                         <div class="form-group">
                                             <label>Tên sản phẩm</label>
                                             <input type="text" class="form-control" id="ten" name="name" required="" placeholder="Tên sản phẩm...">
