--- a/admin/update-donhang.html
+++ b/admin/update-donhang.html
@@ -62,9 +62,9 @@
                                         <div class="form-group">
                                             <label>Tên khách hàng</label>
                                             <input type="text" class="form-control" id="tenKH" name="name" required="">
-                                            <input type="text" class="form-control" id="id" name="name" required="">
-                                            <input type="text" class="form-control" id="idKH" name="name" required="">
-                                            <input type="text" class="form-control" id="idKM" name="name" required="">
+                                            <input type="hidden" class="form-control" id="id" name="name" required="">
+                                            <input type="hidden" class="form-control" id="idKH" name="name" required="">
+                                            <input type="hidden" class="form-control" id="idKM" name="name" required="">
                                         </div>
                                         <div class="form-group">
                                             <label>Email</label>
